src/test/06-Errors/error-assign-to-class.txt
error-assign-to-class.ck:4:10: error: cannot modify constant variable 'JCRev'
[4] null @=> JCRev;
             ^
